<resources>
    <string name="app_name">PracticeAndroid</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="welcome">welcome To My Page !</string>
    <string name="account">Create Your Account</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="confir_pass">Confirm Password</string>
    <string name="android_heading">Android</string>
    <string name="sign_up">Sign Up</string>
</resources>