<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WlcmTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginHorizontal="10sp"
        android:text="@string/welcome"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20sp"
        android:padding="10dp"
        android:text="@string/account"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5sp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5sp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"

        />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"

        />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/green"
        android:padding="5dp"
        android:text="Sign up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20sp"/>


</LinearLayout>