<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WlcmTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/android_heading"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="@string/account"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5sp"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5sp"
        android:hint="@string/enter_password"
        android:inputType="textEmailAddress"
        android:padding="10dp"

        />


    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="5sp"
        android:hint="@string/confir_pass"
        android:inputType="textPassword"
        android:padding="10dp"

        />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:padding="5dp"
        android:text="Sign up"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signup_fb_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="or sign up with"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingVertical="10dp">


        <ImageView
            android:id="@+id/googlelogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/fblogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/twitterlogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/twitter" />
    </LinearLayout>


</LinearLayout>